# CQArchaeo

./: .gitignore  CQArchaeo_example_colab.ipynb  Kendall_application_try.ipynb  Kendall_formula.ipynb  MANIFEST.in  README.html  README.md  pyproject.toml  setup.cfg  setup.py
src/cqarchaeo/: __init__.py  cqarchaeo.py
src/cqarcheo/: __init__.py  cqarcheo.py
