[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "cqarcheo"
version = "0.0.1"
authors = [
  { name="Lorenzo Cardarelli", email="lorenzocardarelli2@gmail.com" },
]
description = "A simple package to analyze archaeological data using Quantogram analysis"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
"Homepage" = "to add"
"Bug Tracker" = "to add"